[package]
name = "cms"
version = "1.0.0"
authors = ["m-m-adams <52469396+m-m-adams@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
description = "A fast CMS streaming data structure implemented in rust"
repository = "https://github.com/m-m-adams/count_min_sketch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.2"
rand = "0.8.3"

[lib]
name = "count_min_sketch"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]
